<resources>
    <string name="app_name">Octane</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dashboard">Dashboard</string>

    <string name="action_settings">Settings</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="exercise_list">Exercise List</string>
    <string name="workout_list">Workout List</string>
    <string name="workout_builder">Configure Workout</string>
    <string name="fit_test">Fitness Tests</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="workout_config">Workouts</string>
    <string name="mealplan_config">Meal Plan</string>

    <string name="ingredients">Ingredients</string>
    <string name="name_lbl">Name:</string>
    <string name="quantity_lbl">Quantity:</string>
    <string name="calories_lbl">Calories:</string>

    <!--forceUnits of measurement -->
    <string-array name="units_of_measurement">
        <item>Cup</item>
        <item>Ounce</item>
        <item>Gram</item>
        <item>Tbsp</item>
        <item>Tsp</item>
        <item>Rasher</item>
        <item>Slice</item>
    </string-array>

    <!-- muscle groups -->
    <string name="muscle_group_abs">Abdominals</string>
    <string name="muscle_group_arms">Arms</string>
    <string name="muscle_group_legs">Legs</string>
    <string name="muscle_group_chest">Chest</string>
    <string name="muscle_group_glute">Glutes</string>
    <string name="muscle_group_back">Back</string>
    <string name="muscle_group_shoulders">Shoulders</string>
    <string name="muscle_group_fullbody">Full Body</string>
    <string name="muscle_group_core">Core</string>

    <!-- muscle groups -->
    <string name="exercise_type_strength">Strength</string>
    <string name="exercise_type_endurance">Endurance</string>
    <string name="exercise_type_flexibility">Flexibility</string>
    <string name="exercise_type_balance">Balance</string>


    <!--forceUnits of measurement -->
    <string-array name="set_counts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>


    <!-- TO DO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exercise_detail">ExerciseDetailActivity</string>
    <string name="title_activity_workout_detail">WorkoutDetailActivity</string>
    <string name="slogan_text">Change the way you thrive!</string>
    <string name="per">per</string>
    <string name="recipes">Recipes</string>
    <string name="add_ingredient">Add an Ingredient</string>
    <string name="title_activity_import_data">ImportDataActivity</string>

    <string name="one_hundred">100</string>
    <string name="zero">0</string>
    <string name="high">High</string>
    <string name="med">Medium</string>
    <string name="low">Low</string>
    <string name="measure_percent">Measure %</string>
    <string name="resistance_percent">Resistance %</string>
    <string name="intensity">Intensity</string>
    <string name="measure_colon">Measure:</string>
    <string name="resistance_colon">Resistance:</string>
    <string name="calories_colon">Calories:</string>
    <string name="intensity_colon">Intensity:</string>
    <string name="exercise_type_colon">Exercise Type:</string>
    <string name="muscle_group_colon">Muscle Group:</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="workout_name">Workout Name</string>
    <string name="enter_workout_name">Enter Workout Name</string>
    <string name="select_muscle_group">Select Muscle Groups</string>
    <string name="select_exercise_type">Select Exercise Type</string>
    <string name="select_intensity">Select Intensity</string>


    <string name="fitness_test_measure">Measure</string>
    <string name="fitness_test_resistance">Resistance</string>
    <string name="fitness_test_date">Date</string>
    <string name="fitness_test_history">History</string>
    <string name="fitness_test_units">Units</string>
    <string name="fitness_test_title">Fitness Test Name</string>

    <string name="thrive_modification_system">Thrive Modification System</string>
    <string name="name_intensity_calories">Name (Intensity : Calories)</string>
    <string name="add_exercise">Add an Exercise</string>
    <string name="workout_exercise_header_resistance">Resistance</string>
    <string name="workout_exercise_header_measure">Measure</string>
    <string name="workout_exercise_header_sets">Sets</string>

</resources>
