<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="edu.uco.schambers4.octane.Fragments.Workout.FitnessTestDetailFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/fitness_test_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitness_test_title"
            android:textSize="@dimen/large_text_height"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/resistance_colon"/>


            <EditText
                android:id="@+id/fitness_test_force_value_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:hint="@string/zero"
                android:inputType="number"/>

            <TextView
                android:id="@+id/fitness_test_force_unit_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fitness_test_units"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/measure_colon"/>

            <EditText
                android:id="@+id/fitness_test_measure_value_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:hint="@string/zero"
                android:inputType="number"/>

            <TextView
                android:id="@+id/fitness_test_measure_unit_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fitness_test_units"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/fitness_test_history"
            android:textSize="@dimen/large_text_height"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fitness_test_date"
                android:textSize="@dimen/medium_text_height"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fitness_test_resistance"
                android:textSize="@dimen/medium_text_height"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fitness_test_measure"
                android:textSize="@dimen/medium_text_height"
                android:textStyle="bold"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/fragment_fitness_test_history_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_fitness_test_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/fragment_fitness_test_history_lv"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_action_add"/>
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>


