<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="edu.uco.schambers4.octane.Fragments.Recipes.RecipeAddEditFragment">

    <TextView
        android:id="@+id/recipe_name_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name_et"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/name_lbl"
        />

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px"/>

    <EditText
        android:id="@id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:inputType="textPersonName"
        android:lines="1"
        android:layout_toEndOf="@id/recipe_name_lbl"
        android:gravity="end"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_list"
        android:layout_below="@+id/add_ingredient_to_recipe_btn"
        android:id="@+id/recipe_ingredients_lbl"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/recipe_ingredients_lbl"
        android:descendantFocusability="blocksDescendants"
        android:id="@+id/recipe_ingredients_list_view"
        />
    <ImageButton
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_et"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_action_add"
        android:backgroundTint="@color/colorAccent"
        android:id="@id/add_ingredient_to_recipe_btn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/add_ingredient_to_recipe_btn"
        android:layout_alignBottom="@id/add_ingredient_to_recipe_btn"
        android:gravity="center"
        android:layout_toEndOf="@id/add_ingredient_to_recipe_btn"
        android:text="@string/add_ingredient"
        android:id="@+id/add_ingredient_lbl"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_recipe_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check"
        />
</RelativeLayout>
